changes to openapi
