# Storage/openapi.yaml
@@ -71,6 +71,19 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/MusicInfo'
+    /stats:
+      get:
+        summary: gets the event stats  
+        operationId: app.get_event_stats
+        description: Gets the stats of the history events
+        responses:
+          '200':
+            description: Successfully returned the event stats
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Stats'
+  
 
 components:
   schemas:
@@ -132,3 +145,15 @@ components:
           type: string
           format: uuid
           example: f058ebd6-02f7-4d3f-942e-904344e8cde5
+    Stats:
+      type: object
+      required:
+        - num_running_stats
+        - num_music_info
+      properties:
+        num_running_stats:
+          type: integer
+          example: 100
+        num_music_info: 
+          type: integer
+          example: 100
